--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -32,7 +32,11 @@ title: "Towards Privacy-Preserving Querying<br />in a Decentralized Environment"
 
 <main>
   <!-- Add sections by specifying their file name, excluding the '.md' suffix. -->
-  <%= section 'introduction'  %>
+  <%= section 'introduction' %>
+  <%= section 'related-work' %>
+  <%= section 'use-case' %>
+  <%= section 'framework' %>
+  <%= section 'conclusions' %>
 </main>
 
 <footer></footer>
