--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Towards Privacy-Preserving Querying<br />in a Decentralized Environment"
+title: "Towards Privacy-Preserving Querying<br />in Decentralized Environments"
 ---
 <header markdown="1">
 # <%= @item[:title] %>
