Add evaluation section

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -36,6 +36,7 @@ title: "Towards Privacy-Preserving Querying<br />in Decentralized Environments"
   <%= section 'related-work' %>
   <%= section 'use-case' %>
   <%= section 'framework' %>
+  <%= section 'evaluation' %>
   <%= section 'conclusions' %>
 </main>
 
