Add todos based on meeting outcomes

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "Towards Privacy-Preserving Querying<br />in Decentralized Environments"
+title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserving Aggregation"
 ---
 <header markdown="1">
 # <%= @item[:title] %>
@@ -36,6 +36,7 @@ title: "Towards Privacy-Preserving Querying<br />in Decentralized Environments"
   <%= section 'related-work' %>
   <%= section 'use-case' %>
   <%= section 'framework' %>
+  <%= section 'solution' %>
   <%= section 'evaluation' %>
   <%= section 'conclusions' %>
 </main>
