updated code highlighting

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -7,6 +7,7 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
 {:#authors}
 - <%= person 'Ruben Taelman', 'http://www.rubensworks.net/', 'http://www.rubensworks.net/#me' %>[<sup>1</sup>](#idlab)
 - <%= person 'Sabrina Kirrane', 'http://sabrinakirrane.com', '#' %>[<sup>2</sup>](#wu)
+- <%= person 'Simon Steyskal', 'http://www.steyskal.info', '#' %>[<sup>3</sup>](#siemens)
 
 {:#affiliations}
 - {:#idlab} <sup>1</sup>IDLab,
@@ -16,6 +17,9 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
 - {:#wu}   <sup>2</sup>Vienna University of Economics and Business,
             Vienna, Austria,
             {firstname.lastname}@wu.ac.at
+- {:#siemens}   <sup>3</sup>Siemens AG Austria,
+            Vienna, Austria,
+            simon.steyskal@siemens.com
 
 </header>
 
