--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -5,6 +5,8 @@
   <title property="foaf:name schema:name"><%= h @item[:title].gsub(/[\n]/, ' ') %></title>
   <link rel="stylesheet" media="screen" href="styles/screen.css" />
   <link rel="stylesheet" media="print"  href="styles/print.css" />
+  <link rel="stylesheet" media="screen" href="styles/code_dark.css" />
+  <link rel="stylesheet" media="print"  href="styles/code_light.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <%= @items['/styles/katex.css'].nil? ? '' : '<link rel="stylesheet" media="all"    href="styles/katex.css" />' %>
 </head>
