more fixes and work on figs

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -7,12 +7,16 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
 {:#authors}
 - <%= person 'Ruben Taelman', 'http://www.rubensworks.net/', 'http://www.rubensworks.net/#me' %>[<sup>1</sup>](#idlab)
 - <%= person 'Sabrina Kirrane', 'http://sabrinakirrane.com', '#' %>[<sup>2</sup>](#wu)
+- <%= person 'Sabrina Kirrane', 'http://sabrinakirrane.com', '#' %>[<sup>2</sup>](#wu)
 
 {:#affiliations}
 - {:#idlab} <sup>1</sup>IDLab,
             Department of Electronics and Information Systems,
             Ghent University – imec,
             {firstname.lastname}@ugent.be
+- {:#wu}   <sup>2</sup>Vienna University of Economics and Business,
+            Vienna, Austria,
+            {firstname.lastname}@wu.ac.at
 - {:#wu}   <sup>2</sup>Vienna University of Economics and Business,
             Vienna, Austria,
             {firstname.lastname}@wu.ac.at
