fixed inconsistent use of 2nd parameter of Summary_Add/Summary_Contains calls

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -7,7 +7,7 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
 {:#authors}
 - <%= person 'Ruben Taelman', 'http://www.rubensworks.net/', 'http://www.rubensworks.net/#me' %>[<sup>1</sup>](#idlab)
 - <%= person 'Sabrina Kirrane', 'http://sabrinakirrane.com', '#' %>[<sup>2</sup>](#wu)
-- <%= person 'Sabrina Kirrane', 'http://sabrinakirrane.com', '#' %>[<sup>2</sup>](#wu)
+- <%= person 'Simon Steyskal', 'http://www.steyskal.info', '#' %>[<sup>3</sup>](#sie)
 
 {:#affiliations}
 - {:#idlab} <sup>1</sup>IDLab,
@@ -17,9 +17,9 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
 - {:#wu}   <sup>2</sup>Vienna University of Economics and Business,
             Vienna, Austria,
             {firstname.lastname}@wu.ac.at
-- {:#wu}   <sup>2</sup>Vienna University of Economics and Business,
+- {:#sie}   <sup>3</sup>Siemens AG Austria,
             Vienna, Austria,
-            {firstname.lastname}@wu.ac.at
+            {firstname.lastname}@siemens.com
 
 </header>
 
