split background and related work & remove evaluation

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -37,11 +37,12 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
 <main>
   <!-- Add sections by specifying their file name, excluding the '.md' suffix. -->
   <%= section 'introduction' %>
-  <%= section 'related-work' %>
+  <%= section 'background' %>
   <%= section 'use-case' %>
   <%= section 'framework' %>
   <%= section 'solution' %>
-  <%= section 'evaluation' %>
+  <!-- <%= section 'evaluation' %> -->
+  <%= section 'related-work' %>
   <%= section 'conclusions' %>
 </main>
 
