Fill in concrete emails

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -13,13 +13,13 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
 - {:#idlab} <sup>1</sup>IDLab,
             Department of Electronics and Information Systems,
             Ghent University – imec,
-            {firstname.lastname}@ugent.be
+            ruben.taelman@ugent.be
 - {:#sie}   <sup>2</sup>Siemens AG Austria,
             Vienna, Austria,
-            {firstname.lastname}@siemens.com
+            simon.steyskalmens.com
 - {:#wu}   <sup>3</sup>Vienna University of Economics and Business,
             Vienna, Austria,
-            {firstname.lastname}@wu.ac.at
+            sabrina.kirrane@wu.ac.at
 
 </header>
 
