adding .col-span and "float: column-top;" to <figure> lets it span 2 col

--- a/content/styles/acm.scss
+++ b/content/styles/acm.scss
@@ -711,6 +711,8 @@ content:",\0020";
 .authors dd:last-child:after {
 content:"";
 }
+.col-span {
+  column-span: all; }
 
 
 article > dl[id^="document-"] {
