--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -16,7 +16,7 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
             ruben.taelman@ugent.be
 - {:#sie}   <sup>2</sup>Siemens AG Austria,
             Vienna, Austria,
-            simon.steyskalmens.com
+            simon.steyskal@siemens.com
 - {:#wu}   <sup>3</sup>Vienna University of Economics and Business,
             Vienna, Austria,
             sabrina.kirrane@wu.ac.at
