reworked the structured, authentication and access control rw

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -42,7 +42,7 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
   <%= section 'framework' %>
   <%= section 'solution' %>
   <!-- <%= section 'evaluation' %> -->
-  <%= section 'related-work' %>
+  <!-- <%= section 'related-work' %>-->
   <%= section 'conclusions' %>
 </main>
 
