--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -7,6 +7,7 @@
   <link rel="stylesheet" media="print"  href="styles/print.css" />
   <link rel="stylesheet" media="screen" href="styles/code_dark.css" />
   <link rel="stylesheet" media="print"  href="styles/code_light.css" />
+  <link rel="stylesheet" href="styles/panels.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <%= @items['/styles/katex.css'].nil? ? '' : '<link rel="stylesheet" media="all"    href="styles/katex.css" />' %>
 </head>
