shortening for EKAW

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -10,15 +10,11 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
 - <%= person 'Sabrina Kirrane', 'http://sabrinakirrane.com', '#' %>[<sup>3</sup>](#wu)
 
 {:#affiliations}
-- {:#idlab} <sup>1</sup>IDLab,
-            Department of Electronics and Information Systems,
-            Ghent University – imec,
+- {:#idlab} <sup>1</sup>IDLab, Ghent University – imec, Belgium,
             ruben.taelman@ugent.be
-- {:#sie}   <sup>2</sup>Siemens AG Austria,
-            Vienna, Austria,
+- {:#sie}   <sup>2</sup>Siemens AG Austria, Austria,
             simon.steyskal@siemens.com
-- {:#wu}   <sup>3</sup>Vienna University of Economics and Business,
-            Vienna, Austria,
+- {:#wu}   <sup>3</sup>Vienna University of Economics and Business, Austria,
             sabrina.kirrane@wu.ac.at
 
 </header>
