adding input related to the attacker model

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -36,7 +36,8 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
   <%= section 'background' %>
   <%= section 'use-case' %>
   <%= section 'framework' %>
-  <%= section 'solution' %>
+  <%= section 'evaluation' %>  
+  <%= section 'discussion' %>
   <%= section 'conclusions' %>
 </main>
 
