Revert "adding input related to the attacker model"
This reverts commit ab18d68e33c687eaafd7b75ff338ce7b52fdbc3c.

Revert Attacker Model

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -36,8 +36,7 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
   <%= section 'background' %>
   <%= section 'use-case' %>
   <%= section 'framework' %>
-  <%= section 'evaluation' %>  
-  <%= section 'discussion' %>
+  <%= section 'solution' %>
   <%= section 'conclusions' %>
 </main>
 
