updates based on feedback from the reviewers

--- a/content/index.md.erb
+++ b/content/index.md.erb
@@ -38,7 +38,10 @@ title: "Towards Querying in Decentralized Environments<br />with Privacy-Preserv
   <%= section 'framework' %>
   <%= section 'solution' %>
   <%= section 'conclusions' %>
+
 </main>
+
+<%= section 'acknowledgements' %>
 
 <footer></footer>
 
