--- a/content/styles/print.scss
+++ b/content/styles/print.scss
@@ -21,3 +21,23 @@ header {
 pre {
   overflow: hidden;
 }
+
+.supsub {
+    display: inline-block;
+}
+
+.supsub sup,
+.supsub sub {
+    position: relative;
+    display: block;
+    font-size: .7em;
+    line-height: 1.2;
+}
+
+.supsub sub {
+    top: .3em;
+}
+
+.supsub sup {
+    top: .3em;
+}
